[package]
name = "openssl-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", default-features = false, features = ["full"] }
tokio-openssl = { version = "0.6.3", default-features = false }
openssl = { version = "0.10.40", default-features = false, features = ["vendored"] }
